--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,53 @@
   <head>
     <title>Sld</title>
     <%= csrf_meta_tags %>
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Raleway" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+    <div class="text-center top-bar" id="top-bar">
+      <p><strong><%= link_to('Sign up', new_user_registration_path) %></strong> and receive free shipping on your first order</p>
+    </div>
+    <div class="brand"><%= link_to('Sofa Love Designs', root_path) %></div>
+    <div class="address-bar" id="address">400 SW 6th Ave #800 | Portland, OR 97204
+  </div>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">Sofa Love Designs</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li> <%= link_to('Products', products_path) %></li>
+            <% if !current_user %>
+              <li><%= link_to('Sign-in', new_user_session_path) %></li>
+              <li><%= link_to('Sign-up', new_user_registration_path) %></li>
+            <% else %>
+              <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
+            <% end %>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+    <div class="container">
+      <%= yield %>
+    </div>
+
+    <footer>
+      <p class="pull-right"><a href="#">Back to top</a></p>
+    </footer>
   </body>
 </html>
