--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -20,6 +20,11 @@
         <% @product.comments.each do |comment| %>
           <div class="comment">
               <p><%= comment.comment %></p>
+              <% if current_user  %>
+                <% if current_user.admin %>
+                    <%= link_to 'Delete comment', product_comment_path(@product), data: {:method => "delete"} %>
+                <% end %>
+              <% end %>
           </div>
         <% end %>
     <% end %>
@@ -33,6 +38,7 @@
   <% if current_user.admin %>
     <% content_for :footer do %>
       <%= link_to '| Edit Product', edit_product_path(@product) %>
+      <%= link_to '| Delete product', product_path(@product), data: {:method => "delete"} %>
     <% end %>
   <% end %>
 <% end %>
