--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -22,7 +22,7 @@
               <p><%= comment.comment %></p>
               <% if current_user  %>
                 <% if current_user.admin %>
-                    <%= link_to 'Delete comment', product_comment_path(@product), data: {:method => "delete"} %>
+                    <%= link_to 'Delete comment', product_comment_path(comment), data: {:method => "delete"} %>
                 <% end %>
               <% end %>
           </div>
